Add New Year 2026 celebration message
Added a new div for New Year 2026 celebration text.

--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
     </div>
   </div>
 
+  <div id="midnightText" class="midnight hidden">
+  🎆 Happy New Year 2026 🎆
+  <p>Cheers to New Beginnings ✨🥂</p>
+</div>
+
   <canvas id="confetti"></canvas>
 
   <footer>
